testsuite/escript/classes/fail-no-ctor-02.err
fail-no-ctor-02.src:4:20: error: In function call: Class 'Animal' does not expose a constructor.