testsuite/escript/classes/fail-no-ctor-02.src
class Animal()
endclass

var obj := Animal::Animal();
print( obj );
